<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_favorites"
        android:title="@string/menu_favorites"
        android:icon="@drawable/ic_favorite_outline"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_grid"
        android:title="@string/menu_layout"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
</menu>
